feat: add mixed-model